Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-5995

MySQL Bug#12750920: EMBEDDED SERVER START/STOP

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Critical
    • Resolution: Fixed
    • 10.0.10
    • 10.0.12
    • None
    • None

    Description

      Please verify if the following revision is worth merging:

      revno: 3402.71.1
      committer: Mattias Jonsson <mattias.jonsson@oracle.com>
      branch nick: b12750920-trunk
      timestamp: Mon 2011-12-05 11:11:58 +0100
      message:
        Bug#12750920: EMBEDDED SERVER START/STOP
       
        The main problem was pthread_key's was never deleted.
       
        Solved by deleting them when stopping the embedded library.
       
        Also fixed a couple of mem leaks found when running the test under
        valgrind.
       
        Some global sys_var was incompatible with restarts of the embedded
        library. They where preallocated and released at the end of the
        embedded library, but it then set its allocated flag to zero, resulting
        in it would not be released on successive ends of the embedded
        library. Solved by adding static buffers to use instead.
       
        The test now restarts the embedded library > 1024 times.

      Attachments

        Issue Links

          Activity

            People

              holyfoot Alexey Botchkov
              svoj Sergey Vojtovich
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.75d
                  0.75d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.