MDEV-5995 MySQL Bug#12750920: EMBEDDED SERVER START/STOP.   Some variables weren't cleared properly so consequitive embedded server start/stop failed.   Cleanups added. Also mysql_client_test.c extended to test that (taken from Mattias Johnson's patch)