sql/mysqld.cc
@@ -2049,6 +2049,7 @@ void clean_up(bool print_message)
   free_global_table_stats();
   free_global_index_stats();
   delete_dynamic(&all_options);
+  free_all_rpl_filters();
 #ifdef HAVE_REPLICATION
   end_slave_list();
 #endif
@@ -2091,6 +2092,13 @@ void clean_up(bool print_message)
   mysql_mutex_unlock(&LOCK_thread_count);
 
   free_list(opt_plugin_load_list_ptr);
+
+  if (THR_THD)
+    (void) pthread_key_delete(THR_THD);
+
+  if (THR_MALLOC)
+    (void) pthread_key_delete(THR_MALLOC);
+
   /*
     The following lines may never be executed as the main thread may have
     killed us
